Desktop version complete

--- a/index.html
+++ b/index.html
@@ -14,24 +14,29 @@
   <title>Product Preview Card Component</title>
 </head>
 <body>
-  <div class="card">
-    <img src="images/image-product-desktop.jpg" alt="Gabrielle Essence Eau De Parfum" class="card__product-image">
-    <div class="card__product-details">
-      <h2 class="card__product-category">Perfume</h2>
-      <h1 class="card__product-name">Gabrielle Essence Eau De Parfum</h2>
-      <p class="card__product-description">
-        A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.
-      </p>
-      <div class="card__product-price">
-        <span class="card__sale-price">$149.99</span>
-        <span class="card__regular-price">$169.99</span>
+  <div class="container">
+    <div class="card">
+      <div class="card__product-image"></div>
+      <div class="card__product-details">
+        <h2 class="card__product-category">Perfume</h2>
+        <h1 class="card__product-name">Gabrielle Essence Eau De Parfum</h2>
+        <p class="card__product-description">
+          A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.
+        </p>
+        <div class="card__product-price">
+          <span class="card__sale-price">$149.99</span>
+          <span class="card__regular-price">$169.99</span>
+        </div>
+        <a href="#" class="card__button">
+          <img src="images/icon-cart.svg" alt="add to cart" class="card__button-icon">
+          <span>Add to Cart</span>
+        </a>
       </div>
-      <a href="#" class="card__button">Add to Cart</a>
     </div>
-  </div>  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://codingrivista.com/">Sandipan Mukherjee</a>.
   </div>
+  <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://codingrivista.com/">Sandipan Mukherjee</a>.
+    </div>
 </body>
 </html>
