--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>Product Preview Card Component</title>
 </head>
 <body>
-  <div class="container">
+  <main class="container">
     <div class="card">
       <div class="card__product-image"></div>
       <div class="card__product-details">
@@ -28,15 +28,15 @@
           <span class="card__regular-price">$169.99</span>
         </div>
         <a href="#" class="card__button">
-          <img src="images/icon-cart.svg" alt="add to cart" class="card__button-icon">
+          <img src="images/icon-cart.svg" alt="cart icon" class="card__button-icon">
           <span>Add to Cart</span>
         </a>
       </div>
     </div>
-  </div>
-  <div class="attribution">
+  </main>
+  <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://codingrivista.com/">Sandipan Mukherjee</a>.
-    </div>
+  </footer>
 </body>
 </html>
