--- a/index.html
+++ b/index.html
@@ -14,23 +14,25 @@
   <title>Product Preview Card Component</title>
 </head>
 <body>
-  <main class="container">
-    <div class="card">
-      <div class="card__product-image"></div>
-      <div class="card__product-details">
-        <h2 class="card__product-category">Perfume</h2>
-        <h1 class="card__product-name">Gabrielle Essence Eau De Parfum</h2>
-        <p class="card__product-description">
-          A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.
-        </p>
-        <div class="card__product-price">
-          <span class="card__sale-price">$149.99</span>
-          <span class="card__regular-price">$169.99</span>
+  <main>
+    <div class="container">
+      <div class="card">
+        <div class="card__product-image"></div>
+        <div class="card__product-details">
+          <p class="card__product-category">Perfume</p>
+          <h1 class="card__product-name">Gabrielle Essence Eau De Parfum</h2>
+          <p class="card__product-description">
+            A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of CHANEL.
+          </p>
+          <div class="card__product-price">
+            <span class="card__sale-price">$149.99</span>
+            <span class="card__regular-price">$169.99</span>
+          </div>
+          <a href="#" class="card__button">
+            <img src="images/icon-cart.svg" alt="cart icon" class="card__button-icon">
+            <span>Add to Cart</span>
+          </a>
         </div>
-        <a href="#" class="card__button">
-          <img src="images/icon-cart.svg" alt="cart icon" class="card__button-icon">
-          <span>Add to Cart</span>
-        </a>
       </div>
     </div>
   </main>
