--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
   <main>
     <div class="container">
       <div class="card">
-        <div class="card__product-image"></div>
+        <picture class="card__product-image-box">
+          <source media="(min-width:650px)" srcset="images/image-product-desktop.jpg">
+          <img src="images/image-product-mobile.jpg" alt="Photo of Gabrielle Essence Eau De Parfum">
+        </picture>
         <div class="card__product-details">
           <p class="card__product-category">Perfume</p>
           <h1 class="card__product-name">Gabrielle Essence Eau De Parfum</h2>
