--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
           </p>
           <div class="card__product-price">
             <span class="card__sale-price">$149.99</span>
-            <span class="card__regular-price">$169.99</span>
+            <del class="card__regular-price">$169.99</del>
           </div>
-          <a href="#" class="card__button">
+          <button type="button" class="card__button">
             <img src="images/icon-cart.svg" alt="cart icon" class="card__button-icon">
             <span>Add to Cart</span>
-          </a>
+          </button>
         </div>
       </div>
     </div>
